...
                            await viewModel.removeFavorite(at: indexSet)
                        }
                    })
                }
                .listStyle(.plain)
                .animation(.default, value: viewModel.favoriteAPIs)
                .accessibilityIdentifier("favoritesAPIsList")
            }
        }
        .navigationTitle("Favorite APIs")
        .overlay {
            if viewModel.isLoading && !viewModel.favoriteAPIs.isEmpty {
                VStack { ProgressView().scaleEffect(1.2); Spacer() }.padding(.top)
                    .transition(.opacity.animation(.easeInOut))
            }
        }
...
